added links to portfolio

--- a/index.html
+++ b/index.html
@@ -37,17 +37,19 @@
         </div>
         <table>
                 <tr>
-                    <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social"><i class="fab fa-linkedin"></i></a></td>
-                    <td class="animated zoomIn" style="animation-delay:2.4s;"><a class="social"><i class="fab fa-github"></i></a></td>
-                    <td class="animated zoomIn" style="animation-delay:2.6s;"><a class="social"><i class="fab fa-stack-overflow"></i></a></td>
-                    <td class="animated zoomIn" style="animation-delay:2.8s;"><a class="social"><i class="fab fa-codepen"></i></a></td>
+                    <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://in.linkedin.com/in/kaustubh-joshi-5432b4111" target="_blank"><i class="fab fa-linkedin"></i></a></td>
+                    <td class="animated zoomIn" style="animation-delay:2.4s;"><a class="social" href="https://github.com/elpidaguy" target="_blank"><i class="fab fa-github"></i></a></td>
+                    <td class="animated zoomIn" style="animation-delay:2.6s;"><a class="social" href="https://stackoverflow.com/users/9144250/elpidaguy" target="_blank"><i class="fab fa-stack-overflow"></i></a></td>
+                    <td class="animated zoomIn" style="animation-delay:2.8s;"><a class="social" href="https://codepen.io/elpidaguy" target="_blank"><i class="fab fa-codepen"></i></a></td>
+                    <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social"><i class="fab fa-steam"></i></a></td>
+                    <td class="animated zoomIn" style="animation-delay:2.4s;"><a class="social" href="https://www.pexels.com/@kaustubh-joshi-2251623" target="_blank"><i class="fas fa-camera-retro"></i></a></td>
                 </tr>
-                <tr>
+                <!-- <tr>
                     <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social"><i class="fab fa-steam"></i></a></td>
                     <td class="animated zoomIn" style="animation-delay:2.4s;"><a class="social"><i class="fab fa-pinterest"></i></a></td>
                     <td class="animated zoomIn" style="animation-delay:2.6s;"><a class="social"><i class="fab fa-facebook"></i></a></td>
                     <td class="animated zoomIn" style="animation-delay:2.8s;"><a class="social"><i class="fab fa-dribbble"></i></a></td>
-                </tr>
+                </tr> -->
         </table>
     </div>
     <div id="work_container" class="container">
