--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div onclick="closework()"><i class="fas fa-angle-right"></i></div>
         <h1>works.</h1>
         <section>
-            <h2>Analyst at <a href="https://www.ikshealth.com/"> IKS Health </a> </h2>
+            <h2>Analyst at IKS Health</h2>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
@@ -73,12 +73,12 @@
             <div onclick="closeabout()"><i class="fas fa-angle-left"></i></div>
             <h1>about.</h1>
             <section>
-                <h2>about me</h2>
+                <h2>Hello there</h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    I am kaustubh ( aka elpidaguy ), An experienced and resourceful full-stack software engineer, I use the tools and resources at my disposal to create system that save time, help people work more effectively and improve the overall user experience.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    Other than technical fronts, I love to sing, some here and there passion for photography and like to play PC Games occasionally.
                 </p>
             </section>
             <section>
@@ -104,7 +104,7 @@
             </section>
         </div>
         <div id="footer">
-            made on earth by a human <br> <a href="https://imfunniee.github.io">imfunniee</a>
+            <a href="https://imfunniee.github.io"> <i class="far fa-heart"></i></a>
         </div>
     <script src="index.js" type="text/javascript"></script>
     <script src="particles.js"></script>
