added new back image

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div onclick="closeabout()"><i class="fas fa-angle-left"></i></div>
             <h1>about.</h1>
             <section>
-                <h2>Hello there</h2>
+                <h2>hello there</h2>
                 <p>
                     I am kaustubh ( aka elpidaguy ), An experienced and resourceful full-stack software engineer, I use the tools and resources at my disposal to create system that save time, help people work more effectively and improve the overall user experience.
                 </p>
