--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     I am kaustubh ( aka elpidaguy ), An experienced and resourceful full-stack software engineer, I use the tools and resources at my disposal to create system that save time, help people work more effectively and improve the overall user experience.
                 </p>
                 <p>
-                    Other than technical fronts, I love to sing, some here and there passion for photography and like to play PC Games occasionally.
+                    Other than technical fronts, I love to go on treks, some here and there passion for photography and like to play PC Games occasionally.
                 </p>
             </section>
             <section>
