--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,13 @@
     <title>Kaustubh Joshi.</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:700" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
     <div id="loading">
         <div id="spinner"></div>
@@ -36,15 +40,24 @@
             <a onclick="showcontact()">contact</a>
         </div>
         <table>
-                <tr>
-                    <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://in.linkedin.com/in/kaustubh-joshi-5432b4111" target="_blank"><i class="fab fa-linkedin"></i></a></td>
-                    <td class="animated zoomIn" style="animation-delay:2.4s;"><a class="social" href="https://github.com/elpidaguy" target="_blank"><i class="fab fa-github"></i></a></td>
-                    <td class="animated zoomIn" style="animation-delay:2.6s;"><a class="social" href="https://stackoverflow.com/users/9144250/elpidaguy" target="_blank"><i class="fab fa-stack-overflow"></i></a></td>
-                    <td class="animated zoomIn" style="animation-delay:2.8s;"><a class="social" href="https://codepen.io/elpidaguy" target="_blank"><i class="fab fa-codepen"></i></a></td>
-                    <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social"><i class="fab fa-steam"></i></a></td>
-                    <td class="animated zoomIn" style="animation-delay:2.4s;"><a class="social" href="https://www.pexels.com/@kaustubh-joshi-2251623" target="_blank"><i class="fas fa-camera-retro"></i></a></td>
-                </tr>
-                <!-- <tr>
+            <tr>
+                <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social"
+                        href="https://in.linkedin.com/in/kaustubh-joshi-5432b4111" target="_blank"><i
+                            class="fab fa-linkedin"></i></a></td>
+                <td class="animated zoomIn" style="animation-delay:2.4s;"><a class="social"
+                        href="https://github.com/elpidaguy" target="_blank"><i class="fab fa-github"></i></a></td>
+                <td class="animated zoomIn" style="animation-delay:2.6s;"><a class="social"
+                        href="https://stackoverflow.com/users/9144250/elpidaguy" target="_blank"><i
+                            class="fab fa-stack-overflow"></i></a></td>
+                <td class="animated zoomIn" style="animation-delay:2.8s;"><a class="social"
+                        href="https://codepen.io/elpidaguy" target="_blank"><i class="fab fa-codepen"></i></a></td>
+                <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social"><i
+                            class="fab fa-steam"></i></a></td>
+                <td class="animated zoomIn" style="animation-delay:2.4s;"><a class="social"
+                        href="https://www.pexels.com/@kaustubh-joshi-2251623" target="_blank"><i
+                            class="fas fa-camera-retro"></i></a></td>
+            </tr>
+            <!-- <tr>
                     <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social"><i class="fab fa-steam"></i></a></td>
                     <td class="animated zoomIn" style="animation-delay:2.4s;"><a class="social"><i class="fab fa-pinterest"></i></a></td>
                     <td class="animated zoomIn" style="animation-delay:2.6s;"><a class="social"><i class="fab fa-facebook"></i></a></td>
@@ -58,7 +71,11 @@
         <section>
             <h2>Analyst at IKS Health</h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum.
             </p>
             <div id="used">
                 <div><i class="fas fa-circle"></i>&nbsp;HTML5</div>
@@ -70,44 +87,51 @@
         </section>
     </div>
     <div id="about_container" class="container">
-            <div onclick="closeabout()"><i class="fas fa-angle-left"></i></div>
-            <h1>about.</h1>
-            <section>
-                <h2>hello there</h2>
-                <p>
-                    I am kaustubh ( aka elpidaguy ), An experienced and resourceful full-stack software engineer, I use the tools and resources at my disposal to create system that save time, help people work more effectively and improve the overall user experience.
-                </p>
-                <p>
-                    Other than technical fronts, I love to go on treks, some here and there passion for photography and like to play PC Games occasionally.
-                </p>
-            </section>
-            <section>
-                <h2>skills</h2>
-                <p>
-                    i do eveything ;)
-                </p>
-            </section>
-        </div>
-          <div id="contact_container" class="container">
-            <div onclick="closecontact()"><i class="fas fa-angle-down"></i></div>
-            <h1>contact.</h1>
-            <section>
-                <h2>contact me</h2>
-                <p>
-                    <form>
-                        <input type="text" placeholder="name" required>
-                        <input type="email" placeholder="email" required><br>
-                        <textarea placeholder="your message" required rows="5"></textarea><br>
-                        <button class="btn_one">send</button>
-                    </form> 
-                </p>
-            </section>
-        </div>
-        <div id="footer">
-            <a href="https://imfunniee.github.io"> <i class="far fa-heart"></i></a>
-        </div>
+        <div onclick="closeabout()"><i class="fas fa-angle-left"></i></div>
+        <h1>about.</h1>
+        <section>
+            <h2>hello there</h2>
+            <p>
+                I am kaustubh ( aka elpidaguy ), An experienced and resourceful full-stack software engineer, I use the
+                tools and resources at my disposal to create system that save time, help people work more effectively
+                and improve the overall user experience.
+            </p>
+            <p>
+                Other than technical fronts, I love to go on treks, some here and there passion for photography and like
+                to play PC Games occasionally.
+            </p>
+        </section>
+        <section>
+            <h2>skills</h2>
+            <p>
+                i do eveything ;)
+            </p>
+        </section>
+    </div>
+    <div id="contact_container" class="container">
+        <div onclick="closecontact()"><i class="fas fa-angle-down"></i></div>
+        <h1>contact.</h1>
+        <section>
+            <h2>contact me</h2>
+            <p>
+                <!-- <form> -->
+                <form action="mailto:exabytes.js@gmail.com" method="get" enctype="text/plain">
+                    <input type="text" placeholder="name" name="name" required>
+                    <input type="email" placeholder="email" name="email" required><br>
+                    <textarea placeholder="your message" name="message" required rows="5"></textarea><br>
+                    <p><button class="btn_two" type="submit" name="submit" > <i class="fas fa-paper-plane"></i> Send</button>
+                        <button class="btn_two" type="reset" name="reset" > <i class="fas fa-eraser"></i> Clear</button>
+                    </p>
+                </form>
+            </p>
+        </section>
+    </div>
+    <div id="footer">
+        <a href="https://imfunniee.github.io"> <i class="far fa-heart"></i></a>
+    </div>
     <script src="index.js" type="text/javascript"></script>
     <script src="particles.js"></script>
     <script src="app.js"></script>
 </body>
+
 </html>
