Updated Steam profile Link Address

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             class="fab fa-stack-overflow"></i></a></td>
                 <td class="animated zoomIn" style="animation-delay:2.8s;"><a class="social"
                         href="https://codepen.io/elpidaguy" target="_blank"><i class="fab fa-codepen"></i></a></td>
-                <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social"><i
+                <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://steamcommunity.com/id/elpidaguy/" target="_blank"><i
                             class="fab fa-steam"></i></a></td>
                 <td class="animated zoomIn" style="animation-delay:2.4s;"><a class="social"
                         href="https://www.pexels.com/@kaustubh-joshi-2251623" target="_blank"><i
