--- a/index.html
+++ b/index.html
@@ -71,19 +71,15 @@
         <section>
             <h2>Analyst at IKS Health</h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum.
+                Entered in Healthcare domain with IKS Health, Airoli as Analyst.
             </p>
             <div id="used">
-                <div><i class="fas fa-circle"></i>&nbsp;HTML5</div>
-                <div><i class="fas fa-circle"></i>&nbsp;CSS3</div>
-                <div><i class="fas fa-circle"></i>&nbsp;Javascript</div>
+                <div><i class="fas fa-circle"></i>&nbsp;.NET MVC/Core</div>
+                <div><i class="fas fa-circle"></i>&nbsp;React js</div>
+                <div><i class="fas fa-circle"></i>&nbsp;SQL</div>
             </div>
-            <button class="btn_one">button 1</button>
-            <button class="btn_two">button 2</button>
+            <!-- <button class="btn_one">button 1</button>
+            <button class="btn_two">button 2</button> -->
         </section>
     </div>
     <div id="about_container" class="container">
