--- a/index.html
+++ b/index.html
@@ -42,19 +42,18 @@
         <table>
             <tr>
                 <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social"
-                        href="https://in.linkedin.com/in/kaustubh-joshi-5432b4111" target="_blank"><i
-                            class="fab fa-linkedin"></i></a></td>
+                        href="https://bit.ly/egLinked" target="_blank"><i class="fab fa-linkedin"></i></a></td>
                 <td class="animated zoomIn" style="animation-delay:2.4s;"><a class="social"
-                        href="https://github.com/elpidaguy" target="_blank"><i class="fab fa-github"></i></a></td>
+                        href="https://bit.ly/ElGithub" target="_blank"><i class="fab fa-github"></i></a></td>
                 <td class="animated zoomIn" style="animation-delay:2.6s;"><a class="social"
-                        href="https://stackoverflow.com/users/9144250/elpidaguy" target="_blank"><i
-                            class="fab fa-stack-overflow"></i></a></td>
+                        href="https://bit.ly/ElOverflow" target="_blank"><i class="fab fa-stack-overflow"></i></a></td>
                 <td class="animated zoomIn" style="animation-delay:2.8s;"><a class="social"
-                        href="https://codepen.io/elpidaguy" target="_blank"><i class="fab fa-codepen"></i></a></td>
-                <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://steamcommunity.com/id/elpidaguy/" target="_blank"><i
-                            class="fab fa-steam"></i></a></td>
+                        href="https://bit.ly/ElCodepen" target="_blank"><i class="fab fa-codepen"></i></a></td>
+                <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social"
+                        href="https://bit.ly/ElSteam" target="_blank"><i class="fab fa-steam"></i></a>
+                </td>
                 <td class="animated zoomIn" style="animation-delay:2.4s;"><a class="social"
-                        href="https://www.pexels.com/@kaustubh-joshi-2251623" target="_blank"><i
+                        href="https://bit.ly/ElPexels" target="_blank"><i
                             class="fas fa-camera-retro"></i></a></td>
             </tr>
             <!-- <tr>
@@ -115,8 +114,9 @@
                     <input type="text" placeholder="name" name="name" required>
                     <input type="email" placeholder="email" name="email" required><br>
                     <textarea placeholder="your message" name="message" required rows="5"></textarea><br>
-                    <p><button class="btn_two" type="submit" name="submit" > <i class="fas fa-paper-plane"></i> Send</button>
-                        <button class="btn_two" type="reset" name="reset" > <i class="fas fa-eraser"></i> Clear</button>
+                    <p><button class="btn_two" type="submit" name="submit"> <i class="fas fa-paper-plane"></i>
+                            Send</button>
+                        <button class="btn_two" type="reset" name="reset"> <i class="fas fa-eraser"></i> Clear</button>
                     </p>
                 </form>
             </p>
