added medium removed steam

--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
                         href="https://bit.ly/ElOverflow" target="_blank"><i class="fab fa-stack-overflow"></i></a></td>
                 <td class="animated zoomIn" style="animation-delay:2.8s;"><a class="social"
                         href="https://bit.ly/ElCodepen" target="_blank"><i class="fab fa-codepen"></i></a></td>
-                <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social"
+                <!-- <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social"
                         href="https://bit.ly/ElSteam" target="_blank"><i class="fab fa-steam"></i></a>
+                </td> -->
+                <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social"
+                    href="https://elpidaguy.medium.com/" target="_blank"><i class="fab fa-medium"></i></a>
                 </td>
                 <td class="animated zoomIn" style="animation-delay:2.4s;"><a class="social"
                         href="https://bit.ly/ElPexels" target="_blank"><i
